# python-project-lvl1

./: .gitignore  .travis.yml  Makefile  README.md  pyproject.toml
brain_games/: __init__.py  cli.py  engine.py  even.py  game_logic.py  test.py
brain_games/game/: calc.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
tatoxer_brain_games.egg-info/: PKG-INFO  SOURCES.txt
