[tool.poetry]
name = "tatoxer_brain_games"
version = "0.9.0"
description = ""
authors = ["Anton Selifanov"]
maintainers = ["Aleksei Pirogov"]
packages = [
  { include = "brain_games" },
]
classifiers = [
	"Topic :: Education"
	"Topic :: Games/Entertainment"
]
repository = "https://github.com/Tatoxer/python-project-lvl1"

[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
