[tool.poetry]
name = "tatoxer_brain_games"
version = "0.9.6"
description = "Hexlet education project"
authors = ["Anton Selifanov"]
maintainers = ["Sergey Karpuk"]
repository = "https://github.com/Tatoxer/python-project-lvl1"
packages = [
  { include = "brain_games" },
]
classifiers = [
	'Topic :: Education',
	'Environment :: Console'
]

[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"

[tool.poetry.scripts]
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
